--- a/src/App.css
+++ b/src/App.css
@@ -29,3 +29,45 @@ body {
     font-size: 0.9rem;
   }
 }
+/* Oculta las flechas de los inputs numéricos */
+
+/* Chrome, Safari, Edge */
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+/* Previene scroll para inputs tipo number */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
+input[type="number"]:focus {
+  outline: none;
+}
+
+/* Bloquear scroll con rueda del mouse en inputs numéricos */
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"]:focus {
+  wheel-event: none;
+}
+
+input[type="number"] {
+  pointer-events: auto;
+}
+
+/* Esta parte es clave: desactiva el scroll */
+input[type="number"]::-webkit-scrollbar {
+  display: none;
+}
+
